Add basic HTTP WebServer with static file serving and wwwroot

--- a/bbs web server.vcxproj
+++ b/bbs web server.vcxproj
@@ -126,10 +126,15 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MultiClientChat.cpp" />
     <ClCompile Include="TcpListener.cpp" />
+    <ClCompile Include="WebServer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MultiClientChat.h" />
     <ClInclude Include="TcpListener.h" />
+    <ClInclude Include="WebServer.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include=".gitignore" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
